Fixed bugs reported by IB sales team: 1. Removed thumbs up/thumbs down button for onboarding messages and also "This is what I found " messages 2. Hide the menu carousel during onboarding of the user 3. Carousel is added to chat widget hierarchically; previously it was placed using absolute position, which was causing bugs on mobile devices 4. Fixed issue with carousel button click throwing an error and not sending message to bot

--- a/chatbot/chatbot.web/wwwroot/content/css/chatbot.css
+++ b/chatbot/chatbot.web/wwwroot/content/css/chatbot.css
@@ -57,10 +57,17 @@
         width: auto
     }
 
-#custom-commands-menu-container {
-    background-color: white;
+div#carousel-container {
+    display: none;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(255,255,255,0.90);
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-top: -5px;
+    padding-top: 8px;
+    border-top: 1px solid rgb(230, 230, 230);
 }
-
 
 .multi-item-carousel .carousel-inner > .item {
     transition: 100ms ease-in-out left;
@@ -508,11 +515,6 @@ body {
 }
 
 /**Reduce size of bot container**/
-.css-y1c0xs,
-[data-css-y1c0xs] {
+.css-y1c0xs, [data-css-y1c0xs] {
     height: 90%;
-}
-
-li.css-1qyo5rb:last-child {
-    margin-bottom: 50px !important;
 }
